# k-forms

./: .gitignore  DiffForms.ipynb  Pipfile  README.md  geometric_point_cloud.py  kgram_models.py  noisy_lines_dataset.py  noisy_lines_training.py  pyproject.toml
